# flai

./: .gitignore  CONTRIBUTING.md  pyproject.toml
.github/workflows/: publish.yml
flai/cli/: __init__.py  cli.py
flai/cli/commands/: init.py  shell.py
flai/cli/console/: __init__.py  console.py
flai/cli/utils/: checklist.py  context.py  fs.py  models.py  ollama.py  scanner.py  system.py
src/flai/: __init__.py  i18n.py  translations.py
src/flai/cli/: __init__.py  cli.py
src/flai/cli/commands/: __init__.py  info.py  init.py  shell.py
src/flai/cli/console/: __init__.py  console.py  theme.py
src/flai/cli/utils/: checklist.py  context.py  fs.py  models.py  ollama.py  scanner.py  system.py  version.py
src/flai/i18n/: flai.pot
src/flai/i18n/de/LC_MESSAGES/: flai.mo  flai.po
src/flai/i18n/en/LC_MESSAGES/: flai.mo  flai.po
src/flai/i18n/es/LC_MESSAGES/: flai.mo  flai.po
src/flai/i18n/fr/LC_MESSAGES/: flai.mo  flai.po
src/flai/i18n/pt/LC_MESSAGES/: flai.mo  flai.po
tests/: __init__.py
