[project]
name = "flai"
version = "0.1.11"
description = "Flai - Framework local para ia"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"

authors = [
    { name = "Alex Yucra" }
]

keywords = [
    "ia local",
    "localhost ia",
    "framework de ia local",
    "pip install flai",
    "flai",
    "flet",
    "ollama",
    "llm local",
    "framework",
    "mvc",
    "ui",
    "desktop",
    "mobile",
    "apk",
    "app",
    "android"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# ------------------------
# Dependencies
# ------------------------
dependencies = [
    "fleting>=1.1.34",
    "psutil>=7.2.2",
    "typer>=0.24.1",
    "types-psutil>=7.2.2.20260130",
    # "langchain",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]

# ------------------------
# CLI ENTRY POINT
# ------------------------
[project.scripts]
flai = "flai.cli.cli:main_app"

# ------------------------
# URLs (PyPI)
# ------------------------
[project.urls]
Homepage = "https://github.com/alexyucra/flai"
Documentation = "https://github.com/alexyucra/flai/tree/main/docs"
Repository = "https://github.com/alexyucra/flai"
Issues = "https://github.com/alexyucra/flai/issues"

# ------------------------
# BUILD SYSTEM (UV)
# ------------------------
[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"


# ------------------------
# PyTest
# ------------------------
[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    # "--maxfail=1",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
xfail_strict = true
junit_family = "xunit2"
filterwarnings = [
    "error",
    # For pytest-xdist
    'ignore::DeprecationWarning:xdist',
]

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = ["src", "tests"]
context = '${CONTEXT}'
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

# ------------------------
# Black
# ------------------------
[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ------------------------
# MyPy
# ------------------------
[tool.mypy]
strict = true
# plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["flai.*"]
follow_untyped_imports = true

# ------------------------
# Isort
# ------------------------
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# ------------------------
# Flake8
# ------------------------
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]
